fix: overflow & position

--- a/13-img-overlay/css/main.css
+++ b/13-img-overlay/css/main.css
@@ -55,11 +55,11 @@ img {
 	cursor: pointer;
 	border-radius: 2rem;
 	/* Importante ocultar los textos, pero comentarlo al trabajar el overlay */
-	/* overflow: hidden; */
+	overflow: hidden;
 }
 
 .article__img {
-
+	position: absolute;
 	width: 100%;
 	height: 100%;
 }
